[package]
name = "mqtt-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
tokio = { version = "1.17", features = ["full"] }
futures = { version = "0.3", default-features = false }
toml = "0.5"
paho-mqtt = { version = "0.10", features = [ "bundled" ], default-features = false}
log = "0.4"
env_logger = "0.8"